# campus-flask-template

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
static/: style.css
templates/: base.html  home.html  index.html
